--- a/react-vite/src/components/Cart/Cart.css
+++ b/react-vite/src/components/Cart/Cart.css
@@ -1,3 +1,27 @@
+@keyframes slide-in {
+  0% {
+    transform: translateX(30vw);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-out {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateX(30vw);
+    opacity: 0;
+  }
+}
+
 #cart-orders {
   background-color: var(--cart-background);
   position: fixed;
@@ -8,6 +32,14 @@
   border-bottom-left-radius: 5px;
   padding: 20px;
   box-shadow: 1px 1px, -0.3em 0 .4em var(--option-background);
+}
+
+#cart-orders.open {
+  animation: slide-in 500ms ease-in-out;
+}
+
+#cart-orders.close {
+  animation: slide-out 500ms ease-in-out;
 }
 
 #cart-orders .cart-title {
