--- a/react-vite/src/context/ThirdLevelModal.css
+++ b/react-vite/src/context/ThirdLevelModal.css
@@ -1,4 +1,4 @@
-@keyframes modal-slide-in {
+@keyframes third-modal-slide-in {
   0% {
     transform: translateX(-30vw);
     opacity: 0;
@@ -20,7 +20,7 @@
   justify-content: center;
   align-items: center;
   z-index: 4;
-  animation: modal-slide-in 500ms ease-in-out;
+  animation: third-modal-slide-in 500ms ease-in-out;
 }
 
 #third-modal-background {
