basic styling for chat

--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -33,6 +33,9 @@
   --my-review-background: rgb(244, 209, 209);
   --unsave-color: rgb(3, 124, 3);
   --discontinue-color: rgb(188 37 14);
+  --chat-input-color: rgb(234, 230, 230);
+  --my-message-background: #0084ff;
+  --other-message-background: #323436;
 }
 
 option:hover {
