--- a/react-vite/src/components/CustomerServiceChatWindow/CustomerServiceChatWindow.css
+++ b/react-vite/src/components/CustomerServiceChatWindow/CustomerServiceChatWindow.css
@@ -62,3 +62,46 @@
 #customer-service-chat-window .close-chat-btn i:hover {
   opacity: 0.7;
 }
+
+#customer-service-chat-window .chat-body {
+  background-color: var(--cart-product-background);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  height: 65vh;
+  padding: 10px;
+}
+
+#customer-service-chat-window .chat-footer {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: var(--cart-delete-btn);
+  padding: 10px;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+#customer-service-chat-window .chat-footer textarea {
+  resize: none;
+  width: 320px;
+  border-radius: 5px;
+  color: var(--black);
+  padding: 10px;
+  background-color: var(--chat-input-color);
+  scrollbar-color: var(--cart-scroll-color) transparent;
+  padding-right: 25px;
+}
+
+#customer-service-chat-window .chat-footer textarea:focus {
+  outline: none;
+}
+
+#customer-service-chat-window .chat-footer .fa-paper-plane {
+  position: absolute;
+  right: 30px;
+  bottom: 20px;
+  cursor: pointer;
+  color: var(--light-orange);
+  font-size: x-large;
+}
