--- a/react-vite/src/components/ChatMessage/ChatMessage.css
+++ b/react-vite/src/components/ChatMessage/ChatMessage.css
@@ -6,6 +6,9 @@
   width: fit-content;
   max-width: 60%;
   margin-left: 5px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .chat-message.me {
@@ -13,4 +16,10 @@
   align-self: flex-end;
   margin-left: 0;
   margin-right: 5px;
+}
+
+.chat-message img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
