enter to send chat, control+enter for new line

--- a/react-vite/src/components/ChatMessage/ChatMessage.css
+++ b/react-vite/src/components/ChatMessage/ChatMessage.css
@@ -23,3 +23,9 @@
   height: 50px;
   border-radius: 50%;
 }
+
+.chat-message .message-parts {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
