--- a/react-vite/src/components/CustomerServiceChatWindow/CustomerServiceChatWindow.css
+++ b/react-vite/src/components/CustomerServiceChatWindow/CustomerServiceChatWindow.css
@@ -125,3 +125,20 @@
   color: var(--light-orange);
   font-size: x-large;
 }
+
+#customer-service-chat-window .typing {
+  width: 60px;
+  aspect-ratio: 4;
+  background: radial-gradient(circle closest-side, var(--other-message-background) 90%, #0000) 0/calc(100%/3) 100% space;
+  clip-path: inset(0 100% 0 0);
+  animation: typing 2s steps(4) infinite;
+  position: absolute;
+  bottom: 240px;
+  left: 32px;
+}
+
+@keyframes typing {
+  to {
+    clip-path: inset(0 -34% 0 0)
+  }
+}
