--- a/react-vite/src/components/NotificationModal/NotificationModal.css
+++ b/react-vite/src/components/NotificationModal/NotificationModal.css
@@ -4,6 +4,13 @@
   gap: 15px;
 }
 
+#notification>h2+div {
+  max-height: 400px;
+  scrollbar-color: var(--cart-scroll-color) transparent;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 #notification .loader {
   width: 100%;
   height: 22px;
